--- a/templates/home.html
+++ b/templates/home.html
@@ -2,13 +2,71 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>ML API</title>
-      
+        <title>Boston House Price Predictor</title>
+        <style>
+            body {
+              background-color: rgb(91, 50, 86);
+              display: flex;
+              /* align-items: center; */
+              justify-content: center; 
+              height: 100vh;
+            }
+            h1 {
+              color: white;
+          
+              margin-bottom: 20px;
+            }
+            form {
+              background-color: white;
+              padding: 20px;
+              border-radius: 10px;
+              box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+              display: flex;
+              flex-direction: column;
+              align-items: center; 
+            }
+            input[type="text"],
+            select {
+              width: 60%;
+              padding: 10px;
+              margin-top: 20px;
+              font-size: 16px;
+              border-radius: 5px;
+              border: 1px solid lightgray;
+            }
+            input[type="submit"] {
+              width: 20%;
+              padding: 10px;
+              margin-top: 20px;
+              font-size: 16px;
+              border-radius: 5px;
+              background-color: purple;
+              color: white;
+              border: none;
+              cursor: pointer;
+            }
+            input[type="submit"]:hover {
+              background-color: white;
+              color: purple;
+            }
+            input[type="submit"]:active {
+              background-color: lightgray;
+              color: white;
+            }
+            .result {
+             margin-top: 20px;
+             font-size: 18px;
+             font-weight: bold;
+             color: white;
+             margin-bottom: 60px;
+            }
+          </style>
     </head>
 
 
 <body>
-    <div class="'login">
+    <div class="'container">
+    
         <h1>Boston House Price Prediction</h1>
         
         <!--Main Input For Receiving Query to our ML model-->
@@ -32,12 +90,10 @@
         
         </form>
         
-        <br>
-        <br>
-
-
+        <div class="result" style="margin-top: 20px; margin-bottom: 40px;">
+            {{prediction_text}}
+        </div>
     </div>
-    {{prediction_text}}
-
+    
 </body>
 </html>
